--- a/src/pages/LandingPage/LandingPage.css
+++ b/src/pages/LandingPage/LandingPage.css
@@ -1,3 +1,9 @@
+*,
+*:: after,
+*:: before {
+  box-sizing: border-box;
+}
+
 :root {
   --primary-color: #3836f5;
   --secondary-color: #f87c48;
@@ -9,6 +15,10 @@
   --menu-header-text-color: #4b4b4b;
   --menu-footer-text-color: #ecf2ff;
   --body-text-color: #00000;
+}
+
+body {
+  background-color: var(--neutral-background-color1);
 }
 
 .hero-heading {
@@ -33,11 +43,17 @@ h3 {
 }
 
 p .body-text-small {
-  font-size: 12px;
+  font-size: 20px;
   font-family: "Poppins", sans-serif;
+  color: var(menu-header-text-color);
 }
 
 p .body-text-medium {
   font-size: 15px;
+  font-family: "Poppins", sans-serif;
+}
+
+p .body-text-medium {
+  font-size: 12px;
   font-family: "Poppins", sans-serif;
 }
