--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -18,6 +18,7 @@ nav ul li .menu-option {
   font-size: 15px;
   font-family: "Poppins", sans-serif;
   text-decoration: none;
+  color: var(--menu-header-text-color);
 }
 
 .wrapper {
