--- a/src/pages/LandingPage/LandingPage.css
+++ b/src/pages/LandingPage/LandingPage.css
@@ -21,39 +21,129 @@ body {
   background-color: var(--neutral-background-color1);
 }
 
-.hero-heading {
-  font-size: 60px;
-  font-weight: bold;
-}
-
-h1 {
-  font-size: 40px;
-  color: var(--primary-color: #3836f5);
-  font-family: "Poppins", sans-serif;
-}
-
 h2 {
-  font-size: 35px;
+  font-weight: normal;
+  font-size: 40px;
+  color: var(--primary-color);
   font-family: "Poppins", sans-serif;
 }
 
 h3 {
+  font-size: 35px;
+  font-family: "Poppins", sans-serif;
+}
+
+h4 {
   font-size: 24px;
   font-family: "Poppins", sans-serif;
 }
 
-p .body-text-small {
+p .body-text-large {
   font-size: 20px;
   font-family: "Poppins", sans-serif;
   color: var(menu-header-text-color);
 }
 
-p .body-text-medium {
+.body-text-medium {
+  margin: 0;
   font-size: 15px;
   font-family: "Poppins", sans-serif;
 }
 
-p .body-text-medium {
+p .body-text-small {
   font-size: 12px;
   font-family: "Poppins", sans-serif;
+}
+
+.hero-container {
+  display: flex;
+  margin: 0 auto;
+  padding: 0;
+  max-width: 930px;
+  height: 527px;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  background-color: var(--neutral-background-color2);
+}
+
+.hero-text {
+  max-width: 383px;
+  height: 291px;
+  text-align: right;
+  align-self: flex-end;
+  background-color: green;
+}
+
+.hero-profile-image {
+  max-height: 467.24px;
+  max-width: 480px;
+  align-self: flex-end;
+}
+.author-name {
+  margin: 0;
+  padding: 0;
+  font-size: 60px;
+  font-weight: bold;
+}
+
+.hero-text h1 {
+  margin: 0;
+  padding: 0;
+  font-size: 20px;
+  color: #818181;
+  font-weight: normal;
+  font-family: "Poppins", sans-serif;
+}
+
+.hero-text p {
+  margin-bottom: 24px;
+}
+
+.hero-text button {
+  margin: 0;
+  width: 250px;
+  height: 50px;
+  background-color: var (--neutral-background-color1);
+  border-radius: 30px;
+  border: 3px solid var(--primary-color);
+  color: var(--primary-color);
+  font-size: 20px;
+}
+
+.key-info,
+.initial {
+  color: var(--primary-color);
+}
+
+/*About section*/
+
+.about-container {
+  display: flex;
+  margin: 0 auto;
+  width: 743px;
+}
+
+.about-content {
+  text-align: right;
+  width: 358px;
+}
+
+.sub-heading {
+  font-size: 18px;
+  color: var(--secondary-color);
+}
+
+.about-content p {
+  font-size: 15px;
+}
+
+.image-background {
+  margin: 0 auto;
+  padding: 40px;
+  background-color: var (--neutral-background-color2);
+}
+
+.about-section-profile-image {
+  width: 167.47px;
+  height: 192.55px;
 }
