--- a/src/pages/CodingProjects/CodingProjects.css
+++ b/src/pages/CodingProjects/CodingProjects.css
@@ -93,6 +93,11 @@ h4 {
   width: 550px;
 }
 
+.project-tools {
+  margin: 0;
+  padding: 0;
+}
+
 .project-tool {
   padding: 3px 0 3px 0;
   text-align: center;
@@ -102,27 +107,34 @@ h4 {
 .project-links {
   display: flex;
   padding: 30px 0 0 0;
-  background-color: pink;
 }
 
 .project-links button {
-  margin: 0 auto;
+  font-size: 20px;
+  margin: 0;
   text-align: center;
-  width: 100px;
-  height: 30px;
+  width: 150px;
+  height: 40px;
   border-radius: 20px;
 }
 
 .code-button {
-  color: var(--primary-color);
   border: 3px solid var(--primary-color);
   background-color: var(--neutral-background-color1);
 }
 
 .site-button {
-  color: var(--secondary-color);
   border: 3px solid var(--secondary-color);
   background-color: var(--neutral-background-color2);
+}
+
+.website-link {
+  text-decoration: none;
+  color: var(--secondary-color);
+}
+.code-link {
+  text-decoration: none;
+  color: var(--primary-color);
 }
 
 .project-image-main {
@@ -135,4 +147,5 @@ h4 {
   margin: 50px auto;
   width: 250px;
   box-shadow: 4px 4px 60px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
 }
