--- a/src/pages/ContactPage/ContactPage.css
+++ b/src/pages/ContactPage/ContactPage.css
@@ -22,7 +22,7 @@ body {
 }
 
 .contact-page-container {
-  margin: 77px auto;
+  margin: 130px auto;
   padding: 0;
   width: 930px;
   height: 500px;
@@ -33,16 +33,40 @@ body {
 .contact-page-left {
   margin: 0;
   padding: 0;
+}
+
+.image-background {
+  position: relative;
+  width: 100%;
+  height: 370px;
   background-image: url("../../assets/images/plant-image.jpg");
-  opacity: 40%;
+  background-size: cover;
+  background-position: center;
+  overflow: hidden;
+  border-top-left-radius: 20px;
+}
+
+.plant-image {
   border-top-left-radius: 20px;
   border-bottom-left-radius: 20px;
-  background-size: cover;
+}
+
+.contact-page-image {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+  width: 220px;
+  height: auto;
+  border: 18px solid #fff;
+  border-radius: 20px;
 }
 
 .contact-details-section {
-  margin: 0;
+  margin: 0 auto;
   padding: 19px 0 0 0;
+  height: 130px;
   text-align: center;
   background-color: var(--neutral-background-color5);
   border-bottom-left-radius: 20px;
@@ -61,15 +85,15 @@ body {
 
 .social-media-icon-section ul li {
   display: inline;
-  padding: 0 15.5px 0 15.5px;
+  padding: 0 31px 0 0px;
 }
 
 .social-media-icon-section {
-  padding: 18px 0 0 0;
+  padding: 15px 0 0 0;
 }
 
 .contact-page-right {
-  padding: 62px 0 0 50px;
+  padding: 70px 0 0 50px;
 }
 
 .contact-page-content {
@@ -93,8 +117,9 @@ body {
   border-radius: 70%;
 }
 
-.contact-page-info {
-  width: 450px;
+.contact-highlight {
+  color: var(--primary-color);
+  font-weight: 600;
 }
 
 .contact-page-button {
@@ -105,11 +130,12 @@ body {
   color: var(--secondary-color);
   border: 3px solid var(--secondary-color);
   background-color: #fff;
+  box-shadow: 0px 4px 60px rgba(0, 0, 0, 0.1);
 }
 
 .contact-page-buttons {
   display: flex;
-  padding: 0 73px 0 0;
+  padding: 30px 60px 0 0;
   gap: 27px;
   justify-content: right;
 }
