fixing css on all pages

--- a/src/pages/LandingPage/LandingPage.css
+++ b/src/pages/LandingPage/LandingPage.css
@@ -1,6 +1,6 @@
 *,
-*:: after,
-*:: before {
+*::after,
+*::before {
   box-sizing: border-box;
 }
 
@@ -14,7 +14,7 @@
   --neutral-background-color5: #e0e0e0;
   --menu-header-text-color: #4b4b4b;
   --menu-footer-text-color: #ecf2ff;
-  --body-text-color: #00000;
+  --body-text-color: #000;
 }
 
 body {
@@ -41,10 +41,10 @@ h4 {
   font-family: "Poppins", sans-serif;
 }
 
-p .body-text-large {
+.body-text-large {
   font-size: 20px;
   font-family: "Poppins", sans-serif;
-  color: var(menu-header-text-color);
+  color: var(--menu-header-text-color);
 }
 
 .body-text-medium {
@@ -53,7 +53,7 @@ p .body-text-large {
   font-family: "Poppins", sans-serif;
 }
 
-p .body-text-small {
+.body-text-small {
   font-size: 12px;
   font-family: "Poppins", sans-serif;
 }
@@ -106,7 +106,7 @@ p .body-text-small {
   margin: 0;
   width: 250px;
   height: 50px;
-  background-color: var (--neutral-background-color1);
+  background-color: var(--neutral-background-color1);
   border-radius: 30px;
   border: 3px solid var(--primary-color);
   color: var(--primary-color);
@@ -165,13 +165,12 @@ p .body-text-small {
   justify-content: center;
   align-items: center;
   padding: 0px 0px 60px 0px;
-  background-color: var (--neutral-background-color2);
 }
 
 .about-section-profile-image {
   width: 224px;
   height: 270.76px;
-  box-shadow: 30px 30px 0px 0px var(--secondary-color);
+  box-shadow: 30px 30px 0px var(--secondary-color);
 }
 
 .medium-button {
