--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -53,3 +53,35 @@ ul {
   padding: 40px 0 0 0;
   color: var(--neutral-background-color1);
 }
+
+@media screen and (max-width: 480px) {
+  .footer-links-container {
+    margin: 0 auto;
+    padding: 40px 20px 0 20px;
+    width: 90%;
+    gap: 30px;
+  }
+
+  .footer-links-list-3 a {
+    font-size: 13px;
+  }
+
+  .footer-links-list-3 ul {
+    flex-direction: column;
+    gap: 30px;
+    text-align: right;
+  }
+
+  ul li .menu-option {
+    font-size: 16px;
+  }
+
+  .author {
+    font-size: 12px;
+    padding: 60px 0 0 0;
+  }
+
+  footer {
+    height: 350px;
+  }
+}
