--- a/src/pages/AboutPage/AboutPage.css
+++ b/src/pages/AboutPage/AboutPage.css
@@ -58,11 +58,11 @@ h4 {
 .profile-image {
   display: block;
   margin: 0 auto;
+  width: 350px;
 }
 
 .about-background {
   margin: 0 auto;
-  margin-top: 30px;
   padding: 0;
   width: 1120px;
   height: 2400px;
@@ -155,4 +155,138 @@ h4 {
   color: var(--secondary-color);
   border: 3px solid var(--secondary-color);
   background-color: #fff;
+}
+
+@media screen and (max-width: 768px) {
+  /* Adapt the layout for tablets */
+  .about-background {
+    width: 90%; /* Replace fixed width */
+    height: auto; /* Let height adjust naturally */
+    margin: 20px auto; /* Center with margins */
+  }
+
+  .contact-info {
+    width: 90%;
+    padding: 20px;
+  }
+
+  h2 {
+    font-size: 30px;
+    letter-spacing: 3px;
+  }
+
+  h3,
+  .body-text-large,
+  .body-text-medium,
+  .body-text-small {
+    font-size: 80%;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .profile-image {
+    margin: 0 auto;
+    width: 300px;
+  }
+
+  .about-background {
+    margin-top: 10px;
+    width: 95%;
+    height: 1740px;
+  }
+
+  .about-heading {
+    padding: 20px 20px 5px 20px; /* Reduce padding */
+  }
+
+  .about-background hr {
+    margin: 0 0 0 20px;
+    width: 60px;
+    height: 3px;
+  }
+
+  .left-side {
+    margin: 25px 0 0 0;
+  }
+
+  .circle-left {
+    margin: 0 0 0 10px;
+    padding: 0;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    box-shadow: 0px 7px 15px rgba(0, 0, 0, 0.25);
+  }
+
+  .text-bubble-left {
+    margin: 0 0 0 10px;
+    padding: 10px;
+    font-size: 12px;
+    width: 250px;
+  }
+
+  .right-side {
+    margin: 20px 10px 0 0;
+  }
+
+  .circle-right {
+    margin: 0 0 0 10px;
+    padding: 0;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    box-shadow: 0px 7px 15px rgba(0, 0, 0, 0.25);
+  }
+
+  .text-bubble-right {
+    padding: 10px;
+    font-size: 12px;
+    width: 260px;
+  }
+
+  .contact-info {
+    margin: 0 auto;
+    margin-bottom: 50px;
+    font-size: 16px;
+    width: 95%;
+    height: 250px;
+  }
+
+  .contact-info p {
+    padding: 60px 0 0 0;
+    font-size: 16px;
+  }
+
+  .about-contact-button {
+    margin: 10px;
+    width: 140px;
+    font-size: 14px;
+  }
+}
+
+@media screen and (min-width: 900px) and (max-width: 1024px) {
+  .text-bubble-left {
+    font-size: 20px;
+    width: 450px;
+  }
+
+  .text-bubble-right {
+    font-size: 20px;
+    width: 600px;
+  }
+
+  .contact-info p {
+    padding: 0 0 0 0;
+    font-size: 24px;
+  }
+
+  .about-contact-button {
+    margin: 10px;
+    width: 200px;
+    font-size: 16px;
+  }
+
+  .about-background {
+    height: 2650px;
+  }
 }
