--- a/src/pages/CodingProjects/CodingProjects.css
+++ b/src/pages/CodingProjects/CodingProjects.css
@@ -146,3 +146,72 @@ h4 {
   box-shadow: 4px 4px 60px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
 }
+
+@media screen and (max-width: 767px) {
+  .code-projects-heading {
+    margin-top: 50px;
+    font-size: 110px;
+    letter-spacing: 15px;
+    width: 100%;
+  }
+
+  .project-container {
+    padding: 5px;
+    margin-bottom: 60px;
+    width: 95%;
+    height: 850px;
+  }
+
+  .project-image-main {
+    width: 100%;
+    object-fit: cover;
+  }
+
+  .sub-image {
+    width: 200px;
+  }
+
+  .project-content {
+    padding: 10px;
+    width: 95%;
+  }
+
+  .project-content h4 {
+    padding: 30px 0 0 0;
+    font-weight: 500;
+    width: 350px;
+  }
+
+  .project-content p {
+    width: 100%;
+    font-size: 12px;
+  }
+
+  .project-tool {
+    margin-top: 5px;
+    font-size: 12px;
+    width: 25%;
+  }
+
+  .project-links {
+    display: flex;
+    padding: 20px 0 0 0;
+  }
+
+  .project-links button {
+    font-size: 15px;
+    margin: 0;
+    text-align: center;
+    width: 90px;
+    height: 30px;
+    border-radius: 20px;
+    background-color: #fff;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1180px) and (orientation: portrait) {
+  .code-projects-heading,
+  .project-container {
+    width: 95%;
+  }
+}
