--- a/src/pages/LandingPage/LandingPage.css
+++ b/src/pages/LandingPage/LandingPage.css
@@ -296,11 +296,11 @@ h4 {
   font-size: 40px;
 }
 
-@media screen and (max-width: 819px) {
+@media screen and (max-width: 767px) {
   .hero-container {
     margin: 0 auto;
     padding: 0;
-    width: 350px;
+    width: 95%;
     height: 710px;
   }
 
@@ -343,7 +343,7 @@ h4 {
   }
 
   .content-background {
-    width: 350px;
+    width: 95%;
   }
 
   .about-container {
@@ -471,8 +471,10 @@ h4 {
 
   .contact-container {
     margin-bottom: 60px;
-    width: 350px;
+    width: 95%;
     height: 300px;
+    justify-items: center;
+    align-items: center;
   }
 
   .contact-container p {
@@ -483,11 +485,11 @@ h4 {
   }
 }
 
-@media screen and (min-width: 820px) and (max-width: 1180px) and (orientation: portrait) {
+@media screen and (min-width: 768px) and (max-width: 1180px) and (orientation: portrait) {
   .hero-container {
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
-    width: 800px;
+    width: 95%;
     height: 350px;
   }
 
@@ -532,7 +534,7 @@ h4 {
   .content-background {
     margin: 0 auto;
     padding: 0;
-    width: 800px;
+    width: 95%;
   }
 
   /*About section*/
@@ -540,7 +542,7 @@ h4 {
   .about-container {
     margin: 0 auto;
     padding: 80px 0 20px 0;
-    width: 750px;
+    width: 95%;
   }
 
   .about-content {
@@ -573,7 +575,7 @@ h4 {
 
   .technical-skills-container {
     padding: 30px 0 0px 0;
-    width: 750px;
+    width: 95%;
   }
 
   .technical-skills-container h2 {
@@ -602,7 +604,7 @@ h4 {
   }
 
   .soft-skills-container {
-    width: 750px;
+    width: 95%;
   }
 
   .soft-skills-container p {
@@ -633,7 +635,7 @@ h4 {
   .experience-container {
     margin: 0 auto;
     padding: 80px 0 80px 0;
-    width: 750px;
+    width: 95%;
   }
 
   .experience-container h2 {
@@ -641,9 +643,14 @@ h4 {
   }
 
   .experience-body {
-    font-size: 15px;
-    width: 750px;
+    font-size: 12px;
+    width: 95%;
     text-align: center;
+  }
+
+  .experience-button {
+    padding: 30px 50px 0 0;
+    text-align: right;
   }
 
   .gallery-images {
@@ -657,8 +664,10 @@ h4 {
 
   .contact-container {
     margin-bottom: 60px;
-    width: 800px;
+    width: 95%;
     height: 300px;
+    justify-items: center;
+    align-items: center;
   }
 
   .contact-container p {
